--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "- Аутентификация и авторизация пользователей\r  - Редактирование информации о пользователе\r  - Создание фильма\r  - Отображение всех сохраненных пользователм фильмов\r  - Удаление сохраненных пользователем фильмов",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
